syntax="proto3";

package join;

import "proto/sqlgen/v1/sqlgen.proto";

option go_package = "github.com/roderm/protoc-gen-go-sqlmap/test/proto/jsonb";

enum LOG_LEVEL {
    ERROR = 0;
    WARNING = 1;
    INFO = 2;
    DEBUG = 3;
}
message Product {
    option (sqlgen.v1.table) = {name:"tbl_product",crud:[R]};
    string ProductID = 1 [(sqlgen.v1.col) = {pk: PK_AUTO, name: "product_id"}];
    string ProductName = 2 [(sqlgen.v1.col).name = "product_name"];
    ProductConfig Config = 3 [(sqlgen.v1.col).name = "product_config"];
}

message ProductConfig {
    option (sqlgen.v1.jsonb) = true;
    string ProductVersion = 1;
    string Domain = 2;
    LOG_LEVEL LogLevel = 3;
}
